# BackgammonRust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/ai/: Cargo.toml
crates/ai/src/: encoding.rs  eval.rs  heuristic.rs  lib.rs  net.rs  search.rs  train.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  scores.rs  tui.rs
crates/engine/: Cargo.toml
crates/engine/src/: board.rs  dice.rs  game.rs  lib.rs  moves.rs  player.rs  stats.rs
crates/engine/src/agent/: random.rs
src/: agent.rs  board.rs  dice.rs  encoding.rs  eval.rs  game.rs  lib.rs  main.rs  net.rs  train.rs  tui.rs
src/agent/: heuristic.rs  human.rs  random.rs
